<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Twitter Hashtag Searcher</string>
    <string name="loading_error_message">Woops.  We couldn\'t complete your search.  Check your internet connection and try again.</string>

    <string name="search">Search</string>
    <string name="saved_results">Saved Search Results</string>

    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>

    <string name="action_settings">Settings</string>
    <string name="saved_search_results">Saved Search Results</string>

    <!--Twitter Hashtag Search Result Type-->
    <string name="pref_result_type_key" translatable="false">pref_result_type</string>
    <string name="pref_result_type_title">Result Type</string>
    <string name="pref_result_type_mixed">Mixed</string>
    <string name="pref_result_type_mixed_value" translatable="false">mixed</string>
    <string name="pref_result_type_recent">Recent</string>
    <string name="pref_result_type_recent_value" translatable="false">recent</string>
    <string name="pref_result_type_popular">Popular</string>
    <string name="pref_result_type_popular_value" translatable="false">popular</string>
    <string name="pref_result_type_default">@string/pref_result_type_mixed_value</string>


    <!--Twitter Hashtag Search Language-->
    <string name="pref_language_key" translatable="false">pref_language</string>
    <string name="pref_language_title">Language</string>
    <string name="pref_language_chinese">Chinese</string>
    <string name="pref_language_chinese_value" translatable="false">zh-cn</string>
    <string name="pref_language_english">English</string>
    <string name="pref_language_english_value" translatable="false">en</string>
    <string name="pref_language_french">French</string>
    <string name="pref_language_french_value" translatable="false">fr</string>
    <string name="pref_language_german">German</string>
    <string name="pref_language_german_value" translatable="false">de</string>
    <string name="pref_language_italian">Italian</string>
    <string name="pref_language_italian_value" translatable="false">it</string>
    <string name="pref_language_japanese">Japanese</string>
    <string name="pref_language_japanese_value" translatable="false">ja</string>
    <string name="pref_language_russian">Russian</string>
    <string name="pref_language_russian_value" translatable="false">ru</string>
    <string name="pref_language_spanish">Spanish</string>
    <string name="pref_language_spanish_value" translatable="false">es</string>
    <string name="pref_language_default">@string/pref_language_english_value</string>

    <!--Twitter Hashtag Search Tweet Count-->
    <string name="pref_count_key" translatable="false">pref_count</string>
    <string name="pref_count_title">Count</string>
    <string name="title_activity_saved_hashtag">SavedHashtagActivity</string>
</resources>
